--- a/archives/toutiao-search/2024-04-06.md
+++ b/archives/toutiao-search/2024-04-06.md
@@ -1,54 +1,74 @@
 # 2024-04-06
 
-共 104 条
+共 124 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Apr 06 2024 08:25:10 GMT+0800 (China Standard Time) -->
-1. [马英九寻根自嘲当兵能力不及先祖](https://so.toutiao.com/search?keyword=马英九寻根自嘲当兵能力不及先祖)
-1. [住建部门回应卧室上方建卫生间](https://so.toutiao.com/search?keyword=住建部门回应卧室上方建卫生间)
+<!-- 最后更新时间 Sat Apr 06 2024 09:37:12 GMT+0800 (China Standard Time) -->
+1. [以色列临时关闭28个驻外使馆](https://so.toutiao.com/search?keyword=以色列临时关闭28个驻外使馆)
+1. [纽约地区发生140年来最大地震](https://so.toutiao.com/search?keyword=纽约地区发生140年来最大地震)
 1. [全国春灌大面积展开](https://so.toutiao.com/search?keyword=全国春灌大面积展开)
+1. [以色列火速回应美国“最后通牒”](https://so.toutiao.com/search?keyword=以色列火速回应美国“最后通牒”)
+1. [女子乘自动扶梯上楼半个身子被卷入](https://so.toutiao.com/search?keyword=女子乘自动扶梯上楼半个身子被卷入)
 1. [10086回应注销手机号等于出卖自己](https://so.toutiao.com/search?keyword=10086回应注销手机号等于出卖自己)
-1. [以总理威胁伊朗：敢报复就坐等地狱](https://so.toutiao.com/search?keyword=以总理威胁伊朗：敢报复就坐等地狱)
-1. [淄博烧烤赵大爷下午4点开始撵客](https://so.toutiao.com/search?keyword=淄博烧烤赵大爷下午4点开始撵客)
-1. [小伙用纸箱投影缅怀宗庆后](https://so.toutiao.com/search?keyword=小伙用纸箱投影缅怀宗庆后)
+1. [住建部门回应卧室上方建卫生间](https://so.toutiao.com/search?keyword=住建部门回应卧室上方建卫生间)
+1. [前夫暴打女儿母亲含泪取证夺抚养权](https://so.toutiao.com/search?keyword=前夫暴打女儿母亲含泪取证夺抚养权)
 1. [雷军送张颂文的SU7真车现身](https://so.toutiao.com/search?keyword=雷军送张颂文的SU7真车现身)
+1. [美国派人来敲打 赖清德反将一军](https://so.toutiao.com/search?keyword=美国派人来敲打+赖清德反将一军)
+1. [资产约25亿 威尔·史密斯称不快乐](https://so.toutiao.com/search?keyword=资产约25亿+威尔·史密斯称不快乐)
+1. [《与凤行》是HE](https://so.toutiao.com/search?keyword=《与凤行》是HE)
+1. [小米辟谣雷军所乘SU7后轮螺丝脱落](https://so.toutiao.com/search?keyword=小米辟谣雷军所乘SU7后轮螺丝脱落)
+1. [美财政部降低对耶伦中国行成果期待](https://so.toutiao.com/search?keyword=美财政部降低对耶伦中国行成果期待)
+1. [播音和表演专业年轻人去殡仪馆工作](https://so.toutiao.com/search?keyword=播音和表演专业年轻人去殡仪馆工作)
+1. [“成都迪士尼”是啥梗](https://so.toutiao.com/search?keyword=“成都迪士尼”是啥梗)
+1. [韶关1小时雨量破纪录](https://so.toutiao.com/search?keyword=韶关1小时雨量破纪录)
+1. [小伙用纸箱投影缅怀宗庆后](https://so.toutiao.com/search?keyword=小伙用纸箱投影缅怀宗庆后)
+1. [中方敦促以立即停止对加沙军事进攻](https://so.toutiao.com/search?keyword=中方敦促以立即停止对加沙军事进攻)
+1. [纽约地震发生时安理会正在开会](https://so.toutiao.com/search?keyword=纽约地震发生时安理会正在开会)
+1. [毛新宇少将清明节携家人回韶山祭祖](https://so.toutiao.com/search?keyword=毛新宇少将清明节携家人回韶山祭祖)
+1. [婚恋网回应用张颂文照片征婚](https://so.toutiao.com/search?keyword=婚恋网回应用张颂文照片征婚)
+1. [以总理威胁伊朗：敢报复就坐等地狱](https://so.toutiao.com/search?keyword=以总理威胁伊朗：敢报复就坐等地狱)
+1. [无人机在俄境内坠落弹药爆炸致8伤](https://so.toutiao.com/search?keyword=无人机在俄境内坠落弹药爆炸致8伤)
+1. [实拍五菱缤果PLUS 510公里旗舰版](https://so.toutiao.com/search?keyword=实拍五菱缤果PLUS+510公里旗舰版)
+1. [外媒：美菲日澳将在南海联合演习](https://so.toutiao.com/search?keyword=外媒：美菲日澳将在南海联合演习)
+1. [美日菲联合巡逻南海有何图谋](https://so.toutiao.com/search?keyword=美日菲联合巡逻南海有何图谋)
+1. [梯子被卖 村民爬树上山洞拜太公](https://so.toutiao.com/search?keyword=梯子被卖+村民爬树上山洞拜太公)
 1. [淄博烧烤又火了 烧烤小哥一脸茫然](https://so.toutiao.com/search?keyword=淄博烧烤又火了+烧烤小哥一脸茫然)
 1. [强吻看病女子医生被行拘6日](https://so.toutiao.com/search?keyword=强吻看病女子医生被行拘6日)
-1. [美财政部降低对耶伦中国行成果期待](https://so.toutiao.com/search?keyword=美财政部降低对耶伦中国行成果期待)
+1. [布朗尼宣布参加2024年选秀](https://so.toutiao.com/search?keyword=布朗尼宣布参加2024年选秀)
+1. [淄博烧烤赵大爷下午4点开始撵客](https://so.toutiao.com/search?keyword=淄博烧烤赵大爷下午4点开始撵客)
+1. [伊朗民众举行大规模游行反以挺巴](https://so.toutiao.com/search?keyword=伊朗民众举行大规模游行反以挺巴)
 1. [湖南一村书记被村民捅死？警方回应](https://so.toutiao.com/search?keyword=湖南一村书记被村民捅死？警方回应)
-1. [小米辟谣雷军所乘SU7后轮螺丝脱落](https://so.toutiao.com/search?keyword=小米辟谣雷军所乘SU7后轮螺丝脱落)
+1. [淄博烧烤店老板介绍顾客去别人家吃](https://so.toutiao.com/search?keyword=淄博烧烤店老板介绍顾客去别人家吃)
+1. [蔡磊称凳子长时间坐不住了](https://so.toutiao.com/search?keyword=蔡磊称凳子长时间坐不住了)
 1. [风靡大江南北的掼蛋是谁发明的](https://so.toutiao.com/search?keyword=风靡大江南北的掼蛋是谁发明的)
 1. [“一口价”黄金饰品售价将全线上涨](https://so.toutiao.com/search?keyword=“一口价”黄金饰品售价将全线上涨)
-1. [“成都迪士尼”是啥梗](https://so.toutiao.com/search?keyword=“成都迪士尼”是啥梗)
 1. [美财长：拜登和我都反对中美“脱钩”](https://so.toutiao.com/search?keyword=美财长：拜登和我都反对中美“脱钩”)
-1. [蔡崇信谈阿里：我们发现我们落后了](https://so.toutiao.com/search?keyword=蔡崇信谈阿里：我们发现我们落后了)
-1. [美日菲联合巡逻南海有何图谋](https://so.toutiao.com/search?keyword=美日菲联合巡逻南海有何图谋)
-1. [媒体：耶伦访华是当家才知柴米贵](https://so.toutiao.com/search?keyword=媒体：耶伦访华是当家才知柴米贵)
-1. [毛新宇少将清明节携家人回韶山祭祖](https://so.toutiao.com/search?keyword=毛新宇少将清明节携家人回韶山祭祖)
-1. [以军为何不顾美国反对空袭伊朗使馆](https://so.toutiao.com/search?keyword=以军为何不顾美国反对空袭伊朗使馆)
-1. [林更新回复赵丽颖：怪我没张口](https://so.toutiao.com/search?keyword=林更新回复赵丽颖：怪我没张口)
+1. [女子大闹革命烈士陵园被警方带走](https://so.toutiao.com/search?keyword=女子大闹革命烈士陵园被警方带走)
+1. [俄一处堤坝决口 近3100人被疏散](https://so.toutiao.com/search?keyword=俄一处堤坝决口+近3100人被疏散)
+1. [联合国人权理事会通过涉加沙决议](https://so.toutiao.com/search?keyword=联合国人权理事会通过涉加沙决议)
+1. [姜爷爷给福宝留纸条：好好吃饭](https://so.toutiao.com/search?keyword=姜爷爷给福宝留纸条：好好吃饭)
+1. [贺炜悼念杨雪：中国足球谢谢你来过](https://so.toutiao.com/search?keyword=贺炜悼念杨雪：中国足球谢谢你来过)
 1. [耶伦指控中国电动汽车产业目的何在](https://so.toutiao.com/search?keyword=耶伦指控中国电动汽车产业目的何在)
-1. [婚恋网回应用张颂文照片征婚](https://so.toutiao.com/search?keyword=婚恋网回应用张颂文照片征婚)
-1. [黄晓明当着林更新的面咯咯哒](https://so.toutiao.com/search?keyword=黄晓明当着林更新的面咯咯哒)
-1. [梯子被卖 村民爬树上山洞拜太公](https://so.toutiao.com/search?keyword=梯子被卖+村民爬树上山洞拜太公)
+1. [成都“迪士尼”打卡点被拆除](https://so.toutiao.com/search?keyword=成都“迪士尼”打卡点被拆除)
 1. [“掼蛋之乡”淮安如何打好这手牌](https://so.toutiao.com/search?keyword=“掼蛋之乡”淮安如何打好这手牌)
+1. [以军为何不顾美国反对空袭伊朗使馆](https://so.toutiao.com/search?keyword=以军为何不顾美国反对空袭伊朗使馆)
+1. [蔡崇信谈阿里：我们发现我们落后了](https://so.toutiao.com/search?keyword=蔡崇信谈阿里：我们发现我们落后了)
+1. [四个男人整整9个小时才砸掉一面墙](https://so.toutiao.com/search?keyword=四个男人整整9个小时才砸掉一面墙)
+1. [马英九寻根自嘲当兵能力不及先祖](https://so.toutiao.com/search?keyword=马英九寻根自嘲当兵能力不及先祖)
+1. [媒体：耶伦访华是当家才知柴米贵](https://so.toutiao.com/search?keyword=媒体：耶伦访华是当家才知柴米贵)
+1. [林更新回复赵丽颖：怪我没张口](https://so.toutiao.com/search?keyword=林更新回复赵丽颖：怪我没张口)
+1. [黄晓明当着林更新的面咯咯哒](https://so.toutiao.com/search?keyword=黄晓明当着林更新的面咯咯哒)
 1. [上海站回应安检口没全开致旅客冲卡](https://so.toutiao.com/search?keyword=上海站回应安检口没全开致旅客冲卡)
 1. [淄博烧烤店家7人串肉忙到停不下来](https://so.toutiao.com/search?keyword=淄博烧烤店家7人串肉忙到停不下来)
-1. [无人机在俄境内坠落弹药爆炸致8伤](https://so.toutiao.com/search?keyword=无人机在俄境内坠落弹药爆炸致8伤)
 1. [乌军摧毁俄一空军基地6架军机](https://so.toutiao.com/search?keyword=乌军摧毁俄一空军基地6架军机)
-1. [女子大闹革命烈士陵园被警方带走](https://so.toutiao.com/search?keyword=女子大闹革命烈士陵园被警方带走)
 1. [陕西省委书记、省长会见马英九一行](https://so.toutiao.com/search?keyword=陕西省委书记、省长会见马英九一行)
-1. [四个男人整整9个小时才砸掉一面墙](https://so.toutiao.com/search?keyword=四个男人整整9个小时才砸掉一面墙)
-1. [成都“迪士尼”打卡点被拆除](https://so.toutiao.com/search?keyword=成都“迪士尼”打卡点被拆除)
 1. [少年杀人潜逃十年 指认现场险被打](https://so.toutiao.com/search?keyword=少年杀人潜逃十年+指认现场险被打)
 1. [淄博烧烤店老板账号改名躲流量](https://so.toutiao.com/search?keyword=淄博烧烤店老板账号改名躲流量)
 1. [耿爽：感谢国际社会关心台湾强震](https://so.toutiao.com/search?keyword=耿爽：感谢国际社会关心台湾强震)
 1. [李沁回应《追风者》男女主没感情线](https://so.toutiao.com/search?keyword=李沁回应《追风者》男女主没感情线)
-1. [韶关1小时雨量破纪录](https://so.toutiao.com/search?keyword=韶关1小时雨量破纪录)
 1. [淄博烧烤摊摊主自夸手法迅速](https://so.toutiao.com/search?keyword=淄博烧烤摊摊主自夸手法迅速)
 1. [猪肾移植人体正常产生尿液](https://so.toutiao.com/search?keyword=猪肾移植人体正常产生尿液)
 1. [韶关暴雨7名村民拜山时遭雷击](https://so.toutiao.com/search?keyword=韶关暴雨7名村民拜山时遭雷击)
-1. [实拍五菱缤果PLUS 510公里旗舰版](https://so.toutiao.com/search?keyword=实拍五菱缤果PLUS+510公里旗舰版)
 1. [耶伦访华第一餐菜单曝光](https://so.toutiao.com/search?keyword=耶伦访华第一餐菜单曝光)
 1. [布林肯：乌克兰将成为北约成员国](https://so.toutiao.com/search?keyword=布林肯：乌克兰将成为北约成员国)
 1. [部分金店黄金零售价破700元](https://so.toutiao.com/search?keyword=部分金店黄金零售价破700元)
