--- a/archives/toutiao-search/2024-04-06.md
+++ b/archives/toutiao-search/2024-04-06.md
@@ -1,55 +1,70 @@
 # 2024-04-06
 
-共 140 条
+共 154 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Apr 06 2024 11:00:43 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sat Apr 06 2024 12:00:35 GMT+0800 (China Standard Time) -->
 1. [纽约地区发生140年来最大地震](https://so.toutiao.com/search?keyword=纽约地区发生140年来最大地震)
-1. [美媒称伊朗可能下周发动袭击报复](https://so.toutiao.com/search?keyword=美媒称伊朗可能下周发动袭击报复)
-1. [全国春灌大面积展开](https://so.toutiao.com/search?keyword=全国春灌大面积展开)
+1. [以色列临时关闭28个驻外使馆](https://so.toutiao.com/search?keyword=以色列临时关闭28个驻外使馆)
+1. [我国春季植树造林大面积展开](https://so.toutiao.com/search?keyword=我国春季植树造林大面积展开)
 1. [10086回应注销手机号等于出卖自己](https://so.toutiao.com/search?keyword=10086回应注销手机号等于出卖自己)
 1. [云南昭通鲁甸县发生4.9级地震](https://so.toutiao.com/search?keyword=云南昭通鲁甸县发生4.9级地震)
-1. [以色列临时关闭28个驻外使馆](https://so.toutiao.com/search?keyword=以色列临时关闭28个驻外使馆)
-1. [女子乘自动扶梯上楼半个身子被卷入](https://so.toutiao.com/search?keyword=女子乘自动扶梯上楼半个身子被卷入)
-1. [雷军送张颂文的SU7真车现身](https://so.toutiao.com/search?keyword=雷军送张颂文的SU7真车现身)
 1. [以色列火速回应美国“最后通牒”](https://so.toutiao.com/search?keyword=以色列火速回应美国“最后通牒”)
-1. [韶关1小时雨量破纪录](https://so.toutiao.com/search?keyword=韶关1小时雨量破纪录)
-1. [资产约25亿 威尔·史密斯称不快乐](https://so.toutiao.com/search?keyword=资产约25亿+威尔·史密斯称不快乐)
-1. [美财政部降低对耶伦中国行成果期待](https://so.toutiao.com/search?keyword=美财政部降低对耶伦中国行成果期待)
-1. [天水麻辣烫大叔辟谣网售调料包](https://so.toutiao.com/search?keyword=天水麻辣烫大叔辟谣网售调料包)
-1. [谢帝被大爷大妈diss了](https://so.toutiao.com/search?keyword=谢帝被大爷大妈diss了)
-1. [住建部门回应卧室上方建卫生间](https://so.toutiao.com/search?keyword=住建部门回应卧室上方建卫生间)
-1. [“成都迪士尼”是啥梗](https://so.toutiao.com/search?keyword=“成都迪士尼”是啥梗)
-1. [美国派人来敲打 赖清德反将一军](https://so.toutiao.com/search?keyword=美国派人来敲打+赖清德反将一军)
+1. [独行侠险胜勇士终结对手6连胜](https://so.toutiao.com/search?keyword=独行侠险胜勇士终结对手6连胜)
+1. [雷军送张颂文的SU7真车现身](https://so.toutiao.com/search?keyword=雷军送张颂文的SU7真车现身)
 1. [伊朗警告美国：别落入以色列陷阱](https://so.toutiao.com/search?keyword=伊朗警告美国：别落入以色列陷阱)
+1. [女子乘自动扶梯上楼半个身子被卷入](https://so.toutiao.com/search?keyword=女子乘自动扶梯上楼半个身子被卷入)
+1. [女子买问界M7不到20天就充不上电](https://so.toutiao.com/search?keyword=女子买问界M7不到20天就充不上电)
+1. [曝美国正准备应对伊朗可能的袭击](https://so.toutiao.com/search?keyword=曝美国正准备应对伊朗可能的袭击)
+1. [天水麻辣烫大叔辟谣网售调料包](https://so.toutiao.com/search?keyword=天水麻辣烫大叔辟谣网售调料包)
 1. [前夫暴打女儿母亲含泪取证夺抚养权](https://so.toutiao.com/search?keyword=前夫暴打女儿母亲含泪取证夺抚养权)
-1. [《与凤行》是HE](https://so.toutiao.com/search?keyword=《与凤行》是HE)
-1. [毛新宇少将清明节携家人回韶山祭祖](https://so.toutiao.com/search?keyword=毛新宇少将清明节携家人回韶山祭祖)
+1. [美媒：地震时自由女神像明显颤动](https://so.toutiao.com/search?keyword=美媒：地震时自由女神像明显颤动)
 1. [婚恋网回应用张颂文照片征婚](https://so.toutiao.com/search?keyword=婚恋网回应用张颂文照片征婚)
-1. [以总理威胁伊朗：敢报复就坐等地狱](https://so.toutiao.com/search?keyword=以总理威胁伊朗：敢报复就坐等地狱)
-1. [大哥展示武艺最后一秒眼镜飞出](https://so.toutiao.com/search?keyword=大哥展示武艺最后一秒眼镜飞出)
-1. [小伙用纸箱投影缅怀宗庆后](https://so.toutiao.com/search?keyword=小伙用纸箱投影缅怀宗庆后)
-1. [淄博烧烤店老板介绍顾客去别人家吃](https://so.toutiao.com/search?keyword=淄博烧烤店老板介绍顾客去别人家吃)
+1. [美国派人来敲打 赖清德反将一军](https://so.toutiao.com/search?keyword=美国派人来敲打+赖清德反将一军)
+1. [韶关1小时雨量破纪录](https://so.toutiao.com/search?keyword=韶关1小时雨量破纪录)
+1. [美媒称伊朗可能下周发动袭击报复](https://so.toutiao.com/search?keyword=美媒称伊朗可能下周发动袭击报复)
+1. [四川一校长和其牌友同期被查](https://so.toutiao.com/search?keyword=四川一校长和其牌友同期被查)
+1. [毛新宇少将清明节携家人回韶山祭祖](https://so.toutiao.com/search?keyword=毛新宇少将清明节携家人回韶山祭祖)
 1. [美日菲联合巡逻南海有何图谋](https://so.toutiao.com/search?keyword=美日菲联合巡逻南海有何图谋)
+1. [郭正亮录节目时炫耀新买的华为手机](https://so.toutiao.com/search?keyword=郭正亮录节目时炫耀新买的华为手机)
+1. [住建部门回应卧室上方建卫生间](https://so.toutiao.com/search?keyword=住建部门回应卧室上方建卫生间)
+1. [谢帝被大爷大妈diss了](https://so.toutiao.com/search?keyword=谢帝被大爷大妈diss了)
+1. [淄博烧烤店老板介绍顾客去别人家吃](https://so.toutiao.com/search?keyword=淄博烧烤店老板介绍顾客去别人家吃)
+1. [成都醉酒男子多次夜间骚扰独居女生](https://so.toutiao.com/search?keyword=成都醉酒男子多次夜间骚扰独居女生)
+1. [蔡磊称凳子长时间坐不住了](https://so.toutiao.com/search?keyword=蔡磊称凳子长时间坐不住了)
+1. [13岁女孩失联十余天警方仍在搜寻](https://so.toutiao.com/search?keyword=13岁女孩失联十余天警方仍在搜寻)
+1. [淄博烧烤又火了 烧烤小哥一脸茫然](https://so.toutiao.com/search?keyword=淄博烧烤又火了+烧烤小哥一脸茫然)
+1. [强吻看病女子医生被行拘6日](https://so.toutiao.com/search?keyword=强吻看病女子医生被行拘6日)
+1. [拜登视察美被撞塌大桥](https://so.toutiao.com/search?keyword=拜登视察美被撞塌大桥)
+1. [美财政部降低对耶伦中国行成果期待](https://so.toutiao.com/search?keyword=美财政部降低对耶伦中国行成果期待)
+1. [以总理威胁伊朗：敢报复就坐等地狱](https://so.toutiao.com/search?keyword=以总理威胁伊朗：敢报复就坐等地狱)
+1. [小伙用纸箱投影缅怀宗庆后](https://so.toutiao.com/search?keyword=小伙用纸箱投影缅怀宗庆后)
+1. [播音和表演专业年轻人去殡仪馆工作](https://so.toutiao.com/search?keyword=播音和表演专业年轻人去殡仪馆工作)
+1. [曝俄乌在巴赫穆特以西战略重镇激战](https://so.toutiao.com/search?keyword=曝俄乌在巴赫穆特以西战略重镇激战)
+1. [美国新泽西4.8级地震 纽约震感强烈](https://so.toutiao.com/search?keyword=美国新泽西4.8级地震+纽约震感强烈)
+1. [淄博烧烤赵大爷下午4点开始撵客](https://so.toutiao.com/search?keyword=淄博烧烤赵大爷下午4点开始撵客)
+1. [《与凤行》是HE](https://so.toutiao.com/search?keyword=《与凤行》是HE)
+1. [拜登为何敲打内塔尼亚胡](https://so.toutiao.com/search?keyword=拜登为何敲打内塔尼亚胡)
+1. [男子晒另一半从女友到老婆的变化](https://so.toutiao.com/search?keyword=男子晒另一半从女友到老婆的变化)
 1. [如何避免南昌大风坠亡事件再次发生](https://so.toutiao.com/search?keyword=如何避免南昌大风坠亡事件再次发生)
+1. [风靡大江南北的掼蛋是谁发明的](https://so.toutiao.com/search?keyword=风靡大江南北的掼蛋是谁发明的)
+1. [媒体人：杨瀚森各方面都不成熟](https://so.toutiao.com/search?keyword=媒体人：杨瀚森各方面都不成熟)
+1. [成都“迪士尼”打卡点被拆除](https://so.toutiao.com/search?keyword=成都“迪士尼”打卡点被拆除)
+1. [60岁泥水工20秒救起落水女孩](https://so.toutiao.com/search?keyword=60岁泥水工20秒救起落水女孩)
+1. [4月5日天水接待游客近35万人次](https://so.toutiao.com/search?keyword=4月5日天水接待游客近35万人次)
+1. [大哥展示武艺最后一秒眼镜飞出](https://so.toutiao.com/search?keyword=大哥展示武艺最后一秒眼镜飞出)
+1. [耶伦指控中国电动汽车产业目的何在](https://so.toutiao.com/search?keyword=耶伦指控中国电动汽车产业目的何在)
+1. [全国春灌大面积展开](https://so.toutiao.com/search?keyword=全国春灌大面积展开)
+1. [资产约25亿 威尔·史密斯称不快乐](https://so.toutiao.com/search?keyword=资产约25亿+威尔·史密斯称不快乐)
+1. [“成都迪士尼”是啥梗](https://so.toutiao.com/search?keyword=“成都迪士尼”是啥梗)
 1. [柯基警官福仔遭宠物狗袭击](https://so.toutiao.com/search?keyword=柯基警官福仔遭宠物狗袭击)
 1. [梯子被卖 村民爬树上山洞拜太公](https://so.toutiao.com/search?keyword=梯子被卖+村民爬树上山洞拜太公)
-1. [强吻看病女子医生被行拘6日](https://so.toutiao.com/search?keyword=强吻看病女子医生被行拘6日)
 1. [布朗尼宣布参加2024年选秀](https://so.toutiao.com/search?keyword=布朗尼宣布参加2024年选秀)
-1. [淄博烧烤又火了 烧烤小哥一脸茫然](https://so.toutiao.com/search?keyword=淄博烧烤又火了+烧烤小哥一脸茫然)
-1. [播音和表演专业年轻人去殡仪馆工作](https://so.toutiao.com/search?keyword=播音和表演专业年轻人去殡仪馆工作)
 1. [无人机在俄境内坠落弹药爆炸致8伤](https://so.toutiao.com/search?keyword=无人机在俄境内坠落弹药爆炸致8伤)
 1. [实拍五菱缤果PLUS 510公里旗舰版](https://so.toutiao.com/search?keyword=实拍五菱缤果PLUS+510公里旗舰版)
 1. [湖南一村书记被村民捅死？警方回应](https://so.toutiao.com/search?keyword=湖南一村书记被村民捅死？警方回应)
 1. [外媒：美菲日澳将在南海联合演习](https://so.toutiao.com/search?keyword=外媒：美菲日澳将在南海联合演习)
-1. [蔡磊称凳子长时间坐不住了](https://so.toutiao.com/search?keyword=蔡磊称凳子长时间坐不住了)
-1. [男子晒另一半从女友到老婆的变化](https://so.toutiao.com/search?keyword=男子晒另一半从女友到老婆的变化)
 1. [网友路遇歼20低空飞过压迫感十足](https://so.toutiao.com/search?keyword=网友路遇歼20低空飞过压迫感十足)
-1. [淄博烧烤赵大爷下午4点开始撵客](https://so.toutiao.com/search?keyword=淄博烧烤赵大爷下午4点开始撵客)
-1. [耶伦指控中国电动汽车产业目的何在](https://so.toutiao.com/search?keyword=耶伦指控中国电动汽车产业目的何在)
-1. [60岁泥水工20秒救起落水女孩](https://so.toutiao.com/search?keyword=60岁泥水工20秒救起落水女孩)
-1. [风靡大江南北的掼蛋是谁发明的](https://so.toutiao.com/search?keyword=风靡大江南北的掼蛋是谁发明的)
-1. [四川一校长和其牌友同期被查](https://so.toutiao.com/search?keyword=四川一校长和其牌友同期被查)
 1. [殡葬从业者讲述工作日常](https://so.toutiao.com/search?keyword=殡葬从业者讲述工作日常)
 1. [中美坦诚交流当前海空安全形势](https://so.toutiao.com/search?keyword=中美坦诚交流当前海空安全形势)
 1. [“一口价”黄金饰品售价将全线上涨](https://so.toutiao.com/search?keyword=“一口价”黄金饰品售价将全线上涨)
@@ -61,7 +76,6 @@
 1. [俄称恐袭与特别军事行动存在关联](https://so.toutiao.com/search?keyword=俄称恐袭与特别军事行动存在关联)
 1. [以军用人工智能识别加沙轰炸目标](https://so.toutiao.com/search?keyword=以军用人工智能识别加沙轰炸目标)
 1. [贺炜悼念杨雪：中国足球谢谢你来过](https://so.toutiao.com/search?keyword=贺炜悼念杨雪：中国足球谢谢你来过)
-1. [成都“迪士尼”打卡点被拆除](https://so.toutiao.com/search?keyword=成都“迪士尼”打卡点被拆除)
 1. [小米辟谣雷军所乘SU7后轮螺丝脱落](https://so.toutiao.com/search?keyword=小米辟谣雷军所乘SU7后轮螺丝脱落)
 1. [中方敦促以立即停止对加沙军事进攻](https://so.toutiao.com/search?keyword=中方敦促以立即停止对加沙军事进攻)
 1. [女子大闹革命烈士陵园被警方带走](https://so.toutiao.com/search?keyword=女子大闹革命烈士陵园被警方带走)
